versions/v4.1.0/build/dts/api/bindings/usb/usb-audio-hs.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/build/dts/api/bindings/usb/usb-audio-hs.html
original_path: build/dts/api/bindings/usb/usb-audio-hs.html
---

# usb-audio-hs

Vendor: [Generic or vendor-independent](../../bindings.md#dt-no-vendor)

## Description

```text
USB Audio headset specific fields.
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `mic-resolution` | `int` | Default value: `16`  Legal values: `8`, `16`, `24`, `32` |
| `mic-sync-type` | `string` | ```text Type of endpoint synchronization for IN devices. Default value is Synchronous. Adaptive is not supported. ```  Default value: `Synchronous`  Legal values: `'No Synchronization'`, `'Asynchronous'`, `'Adaptive'`, `'Synchronous'` |
| `mic-sample-rate-hz` | `int` | Default value: `48000` |
| `mic-polling-interval` | `int` | Default value: `1` |
| `hp-resolution` | `int` | Default value: `16`  Legal values: `8`, `16`, `24`, `32` |
| `hp-sample-rate-hz` | `int` | Default value: `48000` |
| `hp-polling-interval` | `int` | Default value: `1` |
| `mic-channel-l` | `boolean` | ```text Enable (l) channel. ``` |
| `mic-channel-r` | `boolean` | ```text Enable (r) channel. ``` |
| `mic-channel-c` | `boolean` | ```text Enable (c) channel. ``` |
| `mic-channel-lfe` | `boolean` | ```text Enable (lfe) channel. ``` |
| `mic-channel-ls` | `boolean` | ```text Enable (ls) channel. ``` |
| `mic-channel-rs` | `boolean` | ```text Enable (rs) channel. ``` |
| `mic-channel-lc` | `boolean` | ```text Enable (lc) channel. ``` |
| `mic-channel-rc` | `boolean` | ```text Enable (rc) channel. ``` |
| `mic-channel-s` | `boolean` | ```text Enable (s) channel. ``` |
| `mic-channel-sl` | `boolean` | ```text Enable (sl) channel. ``` |
| `mic-channel-sr` | `boolean` | ```text Enable (sr) channel. ``` |
| `mic-channel-t` | `boolean` | ```text Enable (t) channel. ``` |
| `mic-channel-cfg` | `boolean` | ```text Enable (cfg) channel. ``` |
| `mic-feature-mute` | `boolean` | ```text Enable Mute feature. ```  This property is **required**. |
| `mic-feature-volume` | `boolean` | ```text Enable Volume feature. Currently not supported. ``` |
| `mic-feature-tone-control` | `boolean` | ```text Enable Tone Control (Bass, Mid, Treble) feature. Currently not supported. ``` |
| `mic-feature-graphic-equalizer` | `boolean` | ```text Enable  Graphic Equalizer feature. Currently not supported. ``` |
| `mic-feature-automatic-gain-control` | `boolean` | ```text Enable Autoamtic Gain Control feature. Currently not supported. ``` |
| `mic-feature-delay` | `boolean` | ```text Enable Delay feature. Currently not supported. ``` |
| `mic-feature-bass-boost` | `boolean` | ```text Enable Bass Boost feature. Currently not supported. ``` |
| `mic-feature-loudness` | `boolean` | ```text Enable Loudness feature. Currently not supported. ``` |
| `hp-channel-l` | `boolean` | ```text Enable (l) channel. ``` |
| `hp-channel-r` | `boolean` | ```text Enable (r) channel. ``` |
| `hp-channel-c` | `boolean` | ```text Enable (c) channel. ``` |
| `hp-channel-lfe` | `boolean` | ```text Enable (lfe) channel. ``` |
| `hp-channel-ls` | `boolean` | ```text Enable (ls) channel. ``` |
| `hp-channel-rs` | `boolean` | ```text Enable (rs) channel. ``` |
| `hp-channel-lc` | `boolean` | ```text Enable (lc) channel. ``` |
| `hp-channel-rc` | `boolean` | ```text Enable (rc) channel. ``` |
| `hp-channel-s` | `boolean` | ```text Enable (s) channel. ``` |
| `hp-channel-sl` | `boolean` | ```text Enable (sl) channel. ``` |
| `hp-channel-sr` | `boolean` | ```text Enable (sr) channel. ``` |
| `hp-channel-t` | `boolean` | ```text Enable (t) channel. ``` |
| `hp-channel-cfg` | `boolean` | ```text Enable (cfg) channel. ``` |
| `hp-feature-mute` | `boolean` | ```text Enable Mute feature. ```  This property is **required**. |
| `hp-feature-volume` | `boolean` | ```text Enable Volume feature. ``` |
| `hp-feature-tone-control` | `boolean` | ```text Enable Tone Control (Bass, Mid, Treble) feature. Currently not supported. ``` |
| `hp-feature-graphic-equalizer` | `boolean` | ```text Enable  Graphic Equalizer feature. Currently not supported. ``` |
| `hp-feature-automatic-gain-control` | `boolean` | ```text Enable Autoamtic Gain Control feature. Currently not supported. ``` |
| `hp-feature-delay` | `boolean` | ```text Enable Delay feature. Currently not supported. ``` |
| `hp-feature-bass-boost` | `boolean` | ```text Enable Bass Boost feature. Currently not supported. ``` |
| `hp-feature-loudness` | `boolean` | ```text Enable Loudness feature. Currently not supported. ``` |
| `volume-max` | `int` | ```text attention: this attribute is a signed value. This attribute represents the maximum volume level. The range from +127.9961 dB (0x7FFF) down to -127.9961 dB (0x8001). Valid range: 0 - 0xFFFF ```  Default value: `2560` |
| `volume-min` | `int` | ```text attention: this attribute is a signed value. This attribute represents the minimum volume level. The range from +127.9961 dB (0x7FFF) down to -127.9961 dB (0x8001). Valid range: 0 - 0xFFFF ```  Default value: `47616` |
| `volume-res` | `int` | ```text attention: this attribute can only take positive values. This attribute represents the volume resolution(step). 1 = 1/256 dB or 0.00390625 dB. 0x100(256) = 1dB. Valid range: 1 - 0x7FFF ```  Default value: `256` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “usb-audio-hs” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `status` | `string` | ```text Indicates the operational status of the hardware or other resource that the node represents. In particular:    - "okay" means the resource is operational and, for example,     can be used by device drivers   - "disabled" means the resource is not operational and the system     should treat it as if it is not present  For details, see "2.3.4 status" in Devicetree Specification v0.4. ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text This property is a list of strings that essentially define what type of hardware or other resource this devicetree node represents. Each device driver checks for specific compatible property values to find the devicetree nodes that represent resources that the driver should manage.  The recommended format is "vendor,device", The "vendor" part is an abbreviated name of the vendor. The "device" is usually from the datasheet.  The compatible property can have multiple values, ordered from most- to least-specific. Having additional values is useful when the device is a specific instance of a more general family, to allow the system to match the most specific driver available.  For details, see "2.3.1 compatible" in Devicetree Specification v0.4. ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text Information used to address the device. The value is specific to the device (i.e. is different depending on the compatible property).  The "reg" property is typically a sequence of (address, length) pairs. Each pair is called a "register block". Values are conventionally written in hex.  For details, see "2.3.6 reg" in Devicetree Specification v0.4. ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text Optional names given to each register block in the "reg" property. For example:    / {        soc {            #address-cells = <1>;            #size-cells = <1>;             uart@1000 {                reg = <0x1000 0x2000>, <0x3000 0x4000>;                reg-names = "foo", "bar";            };        };   };  The uart@1000 node has two register blocks:    - one with base address 0x1000, size 0x2000, and name "foo"   - another with base address 0x3000, size 0x4000, and name "bar" ``` |
| `interrupts` | `array` | ```text Information about interrupts generated by the device, encoded as an array of one or more interrupt specifiers. The format of the data in this property varies by where the device appears in the interrupt tree. Devices with the same "interrupt-parent" will use the same format in their interrupts properties.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text Extended interrupt specifier for device, used as an alternative to the "interrupts" property.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `interrupt-names` | `string-array` | ```text Optional names given to each interrupt generated by a device. The interrupts themselves are defined in either "interrupts" or "interrupts-extended" properties.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `interrupt-parent` | `phandle` | ```text If present, this refers to the node which handles interrupts generated by this device.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `label` | `string` | ```text Human readable string describing the device. Use of this property is deprecated except as needed on a case-by-case basis.  For details, see "4.1.2 Miscellaneous Properties" in Devicetree Specification v0.4. ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `clocks` | `phandle-array` | ```text Information about the device's clock providers. In general, this property should follow conventions established in the dt-schema binding:    https://github.com/devicetree-org/dt-schema/blob/main/dtschema/schemas/clock/clock.yaml ``` |
| `clock-names` | `string-array` | ```text Optional names given to each clock provider in the "clocks" property. ``` |
| `#address-cells` | `int` | ```text This property encodes the number of <u32> cells used by address fields in "reg" properties in this node's children.  For details, see "2.3.5 #address-cells and #size-cells" in Devicetree Specification v0.4. ``` |
| `#size-cells` | `int` | ```text This property encodes the number of <u32> cells used by size fields in "reg" properties in this node's children.  For details, see "2.3.5 #address-cells and #size-cells" in Devicetree Specification v0.4. ``` |
| `dmas` | `phandle-array` | ```text DMA channel specifiers relevant to the device. ``` |
| `dma-names` | `string-array` | ```text Optional names given to the DMA channel specifiers in the "dmas" property. ``` |
| `io-channels` | `phandle-array` | ```text IO channel specifiers relevant to the device. ``` |
| `io-channel-names` | `string-array` | ```text Optional names given to the IO channel specifiers in the "io-channels" property. ``` |
| `mboxes` | `phandle-array` | ```text Mailbox / IPM channel specifiers relevant to the device. ``` |
| `mbox-names` | `string-array` | ```text Optional names given to the mbox specifiers in the "mboxes" property. ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers relevant to the device. ``` |
| `power-domain-names` | `string-array` | ```text Optional names given to the power domain specifiers in the "power-domains" property. ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
